// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip Analytics event tracking sends dialog tooltip analytics event on open 1`] = `
Array [
  Object {
    "event_extension": "Design system integration",
    "event_name": "tooltip_viewed",
    "text": "tooltip trigger",
  },
]
`;

exports[`Tooltip Analytics event tracking sends icon trigger tooltip analytics event on hover 1`] = `
Array [
  Object {
    "event_extension": "Design system integration",
    "event_name": "tooltip_viewed",
    "text": "tooltip trigger",
  },
]
`;

exports[`Tooltip Analytics event tracking sends inline tooltip analytics event 1`] = `
Array [
  Object {
    "event_extension": "Design system integration",
    "event_name": "tooltip_viewed",
    "text": "inline trigger",
  },
]
`;

exports[`Tooltip renders a tooltip on hover 1`] = `
<button
  aria-label="tooltip trigger"
  class="ds-c-tooltip__trigger ds-c-tooltip__trigger-icon"
  type="button"
>
  <span
    class="ds-c-tooltip-icon__container"
  >
    <svg
      aria-hidden="true"
      class="ds-c-icon ds-c-icon--info-circle-thin ds-c-tooltip-icon"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 16c-4.4 0-8-3.6-8-8s3.6-8 8-8 8 3.6 8 8-3.6 8-8 8zm1-3.7V6.4H7v5.9h2zM7 4.9c0 .6.3.9 1 .9s1-.3 1-.9c0-.3-.1-.5-.2-.7-.2-.1-.5-.2-.8-.2-.3 0-.6.1-.8.2-.1.2-.2.4-.2.7z"
        fill-rule="nonzero"
      />
    </svg>
  </span>
</button>
`;

exports[`Tooltip renders custom trigger component 1`] = `
<a
  aria-label="tooltip trigger"
  class="ds-c-tooltip__trigger ds-c-tooltip__trigger-icon"
  tabindex="0"
>
  <span
    class="ds-c-tooltip-icon__container"
  >
    <svg
      aria-hidden="true"
      class="ds-c-icon ds-c-icon--info-circle-thin ds-c-tooltip-icon"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 16c-4.4 0-8-3.6-8-8s3.6-8 8-8 8 3.6 8 8-3.6 8-8 8zm1-3.7V6.4H7v5.9h2zM7 4.9c0 .6.3.9 1 .9s1-.3 1-.9c0-.3-.1-.5-.2-.7-.2-.1-.5-.2-.8-.2-.3 0-.6.1-.8.2-.1.2-.2.4-.2.7z"
        fill-rule="nonzero"
      />
    </svg>
  </span>
</a>
`;

exports[`Tooltip renders dialog tooltip 1`] = `
<div
  aria-hidden="false"
  class="ds-c-tooltip"
  data-floating-ui-focusable=""
  data-placement="top"
  id=":r6:"
  role="dialog"
  style="max-width: 300px; z-index: 9999; position: absolute; left: 0px; top: 0px; transform: translate(0px, -5px); transition-property: opacity; transition-duration: 250ms;"
  tabindex="0"
>
  <span
    class="ds-c-tooltip__arrow"
    style="bottom: -5px; left: 0px;"
  />
  <div
    class="ds-c-tooltip__content"
  >
    Tooltip body content
  </div>
</div>
`;

exports[`Tooltip renders inverse tooltip 1`] = `
<DocumentFragment>
  <div
    class="ds-c-tooltip__container"
  >
    <button
      aria-label="tooltip trigger"
      class="ds-c-tooltip__trigger ds-c-tooltip__trigger-icon ds-c-tooltip__trigger--inverse"
      type="button"
    >
      <span
        class="ds-c-tooltip-icon__container"
      >
        <svg
          aria-hidden="true"
          class="ds-c-icon ds-c-icon--info-circle-thin ds-c-tooltip-icon"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 16c-4.4 0-8-3.6-8-8s3.6-8 8-8 8 3.6 8 8-3.6 8-8 8zm1-3.7V6.4H7v5.9h2zM7 4.9c0 .6.3.9 1 .9s1-.3 1-.9c0-.3-.1-.5-.2-.7-.2-.1-.5-.2-.8-.2-.3 0-.6.1-.8.2-.1.2-.2.4-.2.7z"
            fill-rule="nonzero"
          />
        </svg>
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Tooltip tooltip with close renders heading element 1`] = `
<div
  aria-hidden="false"
  class="ds-c-tooltip"
  data-floating-ui-focusable=""
  data-placement="top"
  id=":rc:"
  role="dialog"
  style="max-width: 300px; z-index: 9999; position: absolute; left: 0px; top: 0px; opacity: 0; transform: translate(0px, 0px);"
  tabindex="0"
>
  <span
    class="ds-c-tooltip__arrow"
    style="bottom: -5px;"
  />
  <div
    class="ds-c-tooltip__content"
  >
    <div
      class="ds-c-tooltip__header"
    >
      Tooltip heading content
    </div>
    Tooltip body content
  </div>
</div>
`;

exports[`Tooltip tooltip with close renders heading element and close button 1`] = `
<div
  aria-hidden="false"
  class="ds-c-tooltip"
  data-floating-ui-focusable=""
  data-placement="top"
  id=":re:"
  role="dialog"
  style="max-width: 300px; z-index: 9999; position: absolute; left: 0px; top: 0px; opacity: 0; transform: translate(0px, 0px);"
  tabindex="-1"
>
  <span
    class="ds-c-tooltip__arrow"
    style="bottom: -5px;"
  />
  <div
    class="ds-c-tooltip__content"
  >
    <div
      class="ds-c-tooltip__header"
    >
      Tooltip heading content
      <button
        aria-label="Close"
        class="ds-c-button ds-c-button--small ds-c-button--ghost ds-c-tooltip__close-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="ds-c-icon ds-c-icon--close ds-c-icon--close-thin "
          viewBox="-2 -2 18 18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 13.0332964L13.0332964 0M13.0332964 13.0332964L0 0"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
    Tooltip body content
  </div>
</div>
`;
